# poetry-example-project

./: pyproject.toml
hello-poetry/: README.md  pyproject.toml
hello-poetry/myapp/module1/: greeting.py
hello-poetry/tests/unit/: test_my_app.py
myapp/: main.py
pulumi/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
