[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["rasmus-bn <rasbalnor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^3.34.0"
pulumi-aws = "^5.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "myinfra.main:start"